--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=Sistema Teste
+spring.profiles.active=production
+server.port=8081
+server.servlet.context-path=/sistema-teste
